--- a/AddinRemovalTool/AddinRemovalTool/AddinRemovalTool.csproj
+++ b/AddinRemovalTool/AddinRemovalTool/AddinRemovalTool.csproj
@@ -36,6 +36,9 @@
   <PropertyGroup>
     <ApplicationIcon>NetOffice.Icon.32x32.ico</ApplicationIcon>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -71,6 +74,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="app.manifest">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
