--- a/Excel/04 DynamicExample/DynamicExample/DynamicExample.csproj
+++ b/Excel/04 DynamicExample/DynamicExample/DynamicExample.csproj
@@ -32,13 +32,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="NetOffice, Version=1.7.3.0, Culture=neutral, PublicKeyToken=297f57b43ae7c1de">
-      <HintPath>..\..\..\packages\NetOfficeFw.Core.1.7.3.0\lib\net40\NetOffice.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="NetOffice, Version=1.7.4.3, Culture=neutral, PublicKeyToken=297f57b43ae7c1de, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\NetOfficeFw.Core.1.7.4.3\lib\net40\NetOffice.dll</HintPath>
+      <EmbedInteropTypes>False</EmbedInteropTypes>
     </Reference>
-    <Reference Include="OfficeApi, Version=1.7.3.0, Culture=neutral, PublicKeyToken=a39beb0835c43c8e">
-      <HintPath>..\..\..\packages\NetOfficeFw.Core.1.7.3.0\lib\net40\OfficeApi.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="OfficeApi, Version=1.7.4.3, Culture=neutral, PublicKeyToken=a39beb0835c43c8e, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\NetOfficeFw.Core.1.7.4.3\lib\net40\OfficeApi.dll</HintPath>
+      <EmbedInteropTypes>False</EmbedInteropTypes>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -50,9 +50,9 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
-    <Reference Include="VBIDEApi, Version=1.7.3.0, Culture=neutral, PublicKeyToken=931cec8882205047">
-      <HintPath>..\..\..\packages\NetOfficeFw.Core.1.7.3.0\lib\net40\VBIDEApi.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="VBIDEApi, Version=1.7.4.3, Culture=neutral, PublicKeyToken=931cec8882205047, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\NetOfficeFw.Core.1.7.4.3\lib\net40\VBIDEApi.dll</HintPath>
+      <EmbedInteropTypes>False</EmbedInteropTypes>
     </Reference>
   </ItemGroup>
   <ItemGroup>
